@@ -86,6 +86,7 @@ public:
     static QStringList decode(const QMimeData &mimeData, const QString &mime);
     static QList<quint32> decodeInts(const QMimeData &mimeData, const QString &mime);
     static QString headerText(int col);
+    static void setSimpleSort(bool simple);
 
     static PlayQueueModel * self();
 
